<resources>
    <string name="app_name">BusinessPal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone No</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="pay">Pay</string>
    <string name="loan">Loan</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>

</resources>
