<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_small"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_xxxlarge"
            android:src="@mipmap/app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/user_name_background"
                    android:padding="@dimen/padding_small"
                    android:text="@string/email"
                    android:textSize="@dimen/text_size_large" />

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/user_name_edittext_background"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding_small"
                    android:textSize="@dimen/text_size_large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/user_name_background"
                    android:padding="@dimen/padding_small"
                    android:text="@string/password"
                    android:textSize="@dimen/text_size_large" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/user_name_edittext_background"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_small"
                    android:textSize="@dimen/text_size_large" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@drawable/ripple_button_click"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>